[package]
name = "tidal"
version = "0.1.0"
authors = ["Brendan Kennedy <brenwken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
serde = { version = "1.0", features = ["derive"] }
clap = { git = "https://github.com/clap-rs/clap/" }
