[package]
name = "tidal"
version = "0.1.0"
authors = ["Brendan Kennedy <brenwken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
colored = "2"
indicatif = "0.15.0"
clap = "3.0.0-beta.1"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"